--- a/views/user/class5.ejs
+++ b/views/user/class5.ejs
@@ -252,17 +252,17 @@
 
     <!-- ---------------------------------- -->
     <div class="course-details">
-      <h3>Subjects Covered:</h3>
+      <h3 style="color:  #03403f;">Subjects Covered:</h3>
       <ul>
-        <li><strong>Mathematics:</strong> Fractions, Geometry basics, Word Problems, Decimals</li>
-        <li><strong>Science:</strong> Living things, Energy, Environment, Water & Air</li>
-        <li><strong>English:</strong> Grammar, Reading Comprehension, Essay Writing</li>
-        <li><strong>History:</strong> Ancient India, Continents, Government Basics</li>
-        <li><strong>Marathi:</strong> Basic Study</li>
-        <li><strong>Hindi:</strong> Basic Study</li>
+        <li><strong>📘 Mathematics:</strong> Fractions, Geometry basics, Word Problems, Decimals</li>
+        <li><strong>📘 Science:</strong> Living things, Energy, Environment, Water & Air</li>
+        <li><strong>📘 English:</strong> Grammar, Reading Comprehension, Essay Writing</li>
+        <li><strong>📘 History:</strong> Ancient India, Continents, Government Basics</li>
+        <li><strong>📘 Marathi:</strong> Basic Study</li>
+        <li><strong>📘 Hindi:</strong> Basic Study</li>
       </ul>
 
-      <h3>Key Highlights:</h3>
+      <h3 style="color:  #03403f;">Key Highlights:</h3>
       <ul>
         <li>Conceptual Learning with Visual Aids</li>
         <li>Weekly Worksheets and Quizzes</li>
@@ -313,42 +313,42 @@
     <a href="https://cdn1.byjus.com/wp-content/uploads/2019/06/Maharashtra-board-class-5-Maths-Textbook.pdf" style="text-decoration: none; color: inherit;">
       <div class="course-card">
         <img src="https://m.media-amazon.com/images/I/71ttvKm-3nS._UF1000,1000_QL80_.jpg" class="course-img rotate-book" alt="Math">
-        <h3 style="margin-top: 10px;">🧮 Mathematics :- Book</h3>
+        <h5 style="margin-top: 10px; color: #03403f;">🧮 Mathematics :- Book</h5>
       </div>
     </a>
 
     <a href="https://cdn1.byjus.com/wp-content/uploads/2019/06/Maharashtra-board-class-5-EVS-Textbook.pdf" style="text-decoration: none; color: inherit;">
       <div class="course-card">
         <img src="https://m.media-amazon.com/images/I/81SKguc-5eL._UF1000,1000_QL80_.jpg" class="course-img rotate-book" alt="Science">
-        <h3 style="margin-top: 10px;">🔬 Science :- Book</h3>
+        <h5 style="margin-top: 10px; color: #03403f;">🔬 Science  :- Book</h5>
       </div>
     </a>
 
     <a href="https://cdn1.byjus.com/wp-content/uploads/2019/06/Maharashtra-board-class-5-English-Textbook.pdf" style="text-decoration: none; color: inherit;">
       <div class="course-card">
         <img src="https://online.fliphtml5.com/eonfo/ioiz/files/large/1.webp?1590674306&1590674306" class="course-img rotate-book" alt="English">
-        <h3 style="margin-top: 10px;">📘 English :- Book</h3>
+        <h5 style="margin-top: 10px; color: #03403f;">📘 English  :- Book</h5>
       </div>
     </a>
 
     <a href="https://svpv.in/wp/pdf/primary/books/std5-bb-evs2.pdf" style="text-decoration: none; color: inherit;">
       <div class="course-card">
         <img src="https://online.fliphtml5.com/gwwuh/csls/files/large/1.webp?1595477055&1595477055" class="course-img rotate-book" alt="Social">
-        <h3 style="margin-top: 10px;">🌍 History :- Book</h3>
+        <h5 style="margin-top: 10px; color: #03403f;">🌍 History  :- Book</h5>
       </div>
     </a>
 
     <a href="https://cdn1.byjus.com/wp-content/uploads/2019/06/Maharashtra-board-class-5-Marathi-Textbook.pdf" style="text-decoration: none; color: inherit;">
       <div class="course-card">
         <img src="https://imgv2-2-f.scribdassets.com/img/document/282956999/298x396/f80172bf26/1740377430?v=1" class="course-img rotate-book" alt="English">
-        <h3 style="margin-top: 10px;">📘 Marathi :- Book</h3>
+        <h5 style="margin-top: 10px; color: #03403f;">📘 Marathi  :- Book</h5>
       </div>
     </a>
 
     <a href="" style="text-decoration: none; color: inherit;">
       <div class="course-card">
         <img src="https://www.bookshare.org/cover/SY/SY87k5wG0dp9ioWqjE5_z61JdWiWlFghDSGVW-CHBe0-MEDIUM.jpg" class="course-img rotate-book " alt="Social">
-        <h3 style="margin-top: 10px;"> 📘 Hindi :- Book</h3>
+        <h5 style="margin-top: 10px; color: #03403f;"> 📘 Hindi  :- Book</h5>
       </div>
     </a>
 
@@ -358,7 +358,7 @@
 <!-- --------------------------------------------------------- -->
 
 <section style="max-width: 1200px; margin: auto; padding: 50px 20px;">
-  <h1 style="text-align: center; color: #C8102E; margin-bottom: 40px;">📚 Subject-wise Lecture Schedule (with Book )</h1>
+  <h1 style="text-align: center; color: #C8102E; margin-bottom: 40px;">📚 Subject-wise Lecture Schedule :- with Book </h1>
 
   <style>
     .subject-block {
@@ -434,11 +434,11 @@
 
   <!-- Mathematics -->
   <div class="subject-block">
-    <h3 class="subject-heading">🧮 Mathematics</h3>
+    <h3 class="subject-heading" style="color: #03403f;">🧮 Mathematics :- Class</h3>
     <div class="schedule-grid">
       <div class="schedule-card">
         <img src="https://m.media-amazon.com/images/I/71ttvKm-3nS._UF1000,1000_QL80_.jpg" alt="Math Book">
-        <h3>🏫 Offline :- Classes</h3>
+        <h3>🏫 Offline  :- Classes </h3>
         <ul>
           <li><strong>Days:</strong> Mon–Sat</li>
           <li><strong>Time:</strong> 9:00 – 10:00 AM</li>
@@ -462,7 +462,7 @@
 
   <!-- Science -->
   <div class="subject-block">
-    <h3 class="subject-heading">🔬 Science</h3>
+    <h3 class="subject-heading" style="color: #03403f;">🔬 Science :- Class</h3>
     <div class="schedule-grid">
       <div class="schedule-card">
         <img src="https://m.media-amazon.com/images/I/81SKguc-5eL._UF1000,1000_QL80_.jpg" alt="Science Book">
@@ -491,7 +491,7 @@
 
   <!-- English -->
   <div class="subject-block">
-    <h3 class="subject-heading">📘 English</h3>
+    <h3 class="subject-heading" style="color: #03403f;">📘 English :- Class</h3>
     <div class="schedule-grid">
       <div class="schedule-card">
         <img src="https://online.fliphtml5.com/eonfo/ioiz/files/large/1.webp?1590674306" alt="English Book">
@@ -519,7 +519,7 @@
 
   <!-- Social Studies -->
   <div class="subject-block">
-    <h3 class="subject-heading">🌍 History</h3>
+    <h3 class="subject-heading" style="color: #03403f;">🌍 History :- Class</h3>
     <div class="schedule-grid">
       <div class="schedule-card">
         <img src="https://online.fliphtml5.com/gwwuh/csls/files/large/1.webp?1595477055&1595477055" alt="Social Book">
@@ -546,7 +546,7 @@
 
    
   <div class="subject-block">
-    <h3 class="subject-heading">📘 Marathi</h3>
+    <h3 class="subject-heading" style="color: #03403f;">📘 Marathi :- Class</h3>
     <div class="schedule-grid">
       <div class="schedule-card">
         <img src="https://imgv2-2-f.scribdassets.com/img/document/282956999/298x396/f80172bf26/1740377430?v=1" alt="English Book">
@@ -574,7 +574,7 @@
 
   <!-- Social Studies -->
   <div class="subject-block">
-    <h3 class="subject-heading">📘Hindi</h3>
+    <h3 class="subject-heading" style="color: #03403f;">📘Hindi :- Class</h3>
     <div class="schedule-grid">
       <div class="schedule-card">
         <img src="https://www.bookshare.org/cover/SY/SY87k5wG0dp9ioWqjE5_z61JdWiWlFghDSGVW-CHBe0-MEDIUM.jpg" alt="Social Book">
