--- a/views/user/class9.ejs
+++ b/views/user/class9.ejs
@@ -248,7 +248,7 @@
 
     <!-- ---------------------------- -->
     <div class="course-details">
-      <h3>Subjects Covered:</h3>
+      <h3 style="color:  #03403f;">Subjects Covered:</h3>
       <ul>
         <li><strong>📘 Mathematics:</strong> Algebra basics, Geometry, Integers, Data Handling</li>
         <li><strong>📘 Science:</strong> Food components, Materials, Living organisms, Motion</li>
@@ -258,7 +258,7 @@
         <li><strong>📘 Hindi:</strong> All Basic concepts</li>
       </ul>
 
-      <h3>Key Highlights:</h3>
+      <h3 style="color:  #03403f;">Key Highlights:</h3>
       <ul>
         <li>Interactive Learning with Practical Examples</li>
         <li>Bi-weekly Assessments and Progress Reports</li>
@@ -309,7 +309,7 @@
     <a href="/courses/mathematics" style="text-decoration: none; color: inherit;">
       <div class="course-card">
         <img src="https://online.fliphtml5.com/xiibz/rwvb/files/large/1.webp?1587616392&1587616392" class="course-img rotate-book" alt=" Mathematics">
-        <h3 style="margin-top: 10px;">🧮 Mathematics :- Book</h3>
+        <h5 style="margin-top: 10px; color:  #03403f;">🧮 Mathematics :- Book</h5>
         <p></p>
       </div>
     </a>
@@ -317,7 +317,7 @@
     <a href="/courses/science" style="text-decoration: none; color: inherit;">
       <div class="course-card">
         <img src="https://rukminim2.flixcart.com/image/300/400/xif0q/book/i/r/k/sura-s-9th-standard-guide-science-full-year-exam-guide-in-original-imagybgfcpwaheeu.jpeg?q=90&crop=false" class="course-img rotate-book" alt="Science">
-        <h3 style="margin-top: 10px;">🔬 Science :- Book</h3>
+        <h5 style="margin-top: 10px; color:  #03403f;">🔬 Science :- Book</h5>
         <p></p>
       </div>
     </a>
@@ -325,7 +325,7 @@
     <a href="/courses/english" style="text-decoration: none; color: inherit;">
       <div class="course-card">
         <img src="https://online.fliphtml5.com/awqzi/psan/files/large/1.webp?1591283367&1591283367" class="course-img rotate-book" alt="English">
-        <h3 style="margin-top: 10px;">📘 English :- Book</h3>
+        <h5 style="margin-top: 10px; color:  #03403f;">📘 English :- Book</h5>
         <p></p>
       </div>
     </a>
@@ -333,7 +333,7 @@
     <a href="/courses/social" style="text-decoration: none; color: inherit;">
       <div class="course-card">
         <img src="https://online.fliphtml5.com/sldrt/jewp/files/large/1.webp?1587615301&1587615301" class="course-img rotate-book" alt="Social">
-        <h3 style="margin-top: 10px;">🌍 History :- Book</h3>
+        <h5 style="margin-top: 10px; color:  #03403f;">🌍 History :- Book</h5>
         <p></p>
       </div>
     </a>
@@ -341,7 +341,7 @@
     <a href="/courses/computer" style="text-decoration: none; color: inherit;">
       <div class="course-card">
         <img src="https://online.fliphtml5.com/xxhjq/caon/files/large/1.webp?1642526409&1642526409" class="course-img rotate-book" alt="Computer">
-        <h3 style="margin-top: 10px;">📘 Marathi :- Book</h3>
+        <h5 style="margin-top: 10px; color:  #03403f;">📘 Marathi :- Book</h5>
         <p></p>
       </div>
     </a>
@@ -349,7 +349,7 @@
        <a href="/courses/computer" style="text-decoration: none; color: inherit;">
       <div class="course-card">
         <img src="https://imgv2-2-f.scribdassets.com/img/document/672657450/original/220bda6cf0/1?v=1" class="course-img rotate-book" alt="Computer">
-        <h3 style="margin-top: 10px;">📘 Hindi :- Book</h3>
+        <h5 style="margin-top: 10px; color:  #03403f;">📘 Hindi :- Book</h5>
         <p></p>
       </div>
     </a>
@@ -360,7 +360,7 @@
 <!-- --------------------------------------------------------- -->
 
 <section style="max-width: 1200px; margin: auto; padding: 50px 20px;">
-  <h1 style="text-align: center; color: #C8102E; margin-bottom: 40px;">📚 Subject-wise Lecture Schedule (with Book )</h1>
+  <h1 style="text-align: center; color: #C8102E; margin-bottom: 40px;">📚 Subject-wise Lecture Schedule :- with Book </h1>
 
   <style>
     .subject-block {
